delete ts from packegae.json

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "not < 0.25%"
   ],
   "scripts": {
-    "lint": "eslint src/ && tsc",
+    "lint": "eslint src",
     "build": "webpack --mode production",
     "start": "webpack serve --mode development --open"
   },
